# pysh

./: .gitignore  .ycm_extra_conf.py  README.md
.github/workflows/: test.yml
extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  test.pysh  vsc-extension-quickstart.md
extension/syntaxes/: pysh.json  pysh.tmLanguage
pysh/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  formatter.cpp  formatter.h  run_tests.sh  transpile.cpp
pysh/api/: CMakeLists.txt
pysh/examples/: count_lines.pysh  get_numbers.pysh  pipes_example.pysh
pysh/include/: transpile.hpp
pysh/lib/: transpile.cpp
pysh/src/: formatter.cpp  formatter.hpp  main.cpp  pyshtest.cpp  transpile.cpp  transpile.hpp
pysh/tests/: CMakeLists.txt  test_formatter.cpp  test_transpile.cpp  tests.pysh
